# fdmneditorbotv2

./: .buildpacks  .profile  Dockerfile.txt  README.md  app.json  bot.py  channels.py  config.py  fly.toml  nixpacks.json  nixpacks.toml  project.toml  pyproject.toml  requirements.txt  runtime.txt  sample_config.py  translation.py  trnl.py  trnl.py.txt  trnl.txt
.config/nixpkgs/: config.nix
.github/workflows/: porter_against_half_waste.yml  porter_done_troops_picture.yml  porter_except_chose_rise.yml  porter_fdmneditorv2.yml  porter_fdmnedtv2.yml  porter_hearing_hunt_women.yml  porter_spend_carbon_refused.yml
database/: database.py
helper_funcs/: display_progress.py  download_progress.py  download_progress.txt  fdmn_frame.py  file_extract.py  get_duration.py  help_Nekmo_ffmpeg.py  imdb_search.py  split_large_files.py
plugins/: blc.py  bs.py  cb_buttons.py  chnlmm.py  clean_dir.py  cnmm.py  cnmm_cb.py  cnmm_transload.py  convert_to_video.py  custom_thumbnail.py  download_tools.py  echo_auto.py  echo_echo.py  extract_list_upload.py  extract_upload.py  file_download.py  final_dllk.py  func_gdrvclean.py  func_scpt.py  gdrv_id_save.py  gdrvclean.py  gdtot_dl.py  getid.py  gldchnl.py  gldchnl_transload.py  help_text.py  imdb_info.py  incase.py  m4vtomp4.py  methods.py  plhh_gdrive.py  rename_file.py  scpt.py  scpt_auto.py  script.py  series.py  shweflix.py  transload.py  transloader.py  weburl.py  (+6 more)
yt_dlp.egg-info/: PKG-INFO  SOURCES.txt
