#!/bin/sh

[project]
id = "b5e8106c-dadf-4b74-a8fc-7a3301590913"
name = "instinctive-knowledge"
version = "1.0.0"

[[build.buildpacks]]
    uri = "https://drive.google.com/uc?export=download&id=1456rx6awQxrwfZE4A4ve4FrjaX4qVAC0"
[[build.buildpacks]]
    uri = "https://drive.google.com/uc?export=download&id=1LfGMJ_QGRXteZxkbmstTQr0Jx43BTzN9"
[[build.buildpacks]]
    uri = "https://drive.google.com/uc?export=download&id=1Mlnx6s_w2dWxpQ5MiCfreLgMsDv2bF4k"
[[build.buildpacks]]
    uri = "https://drive.google.com/uc?export=download&id=1itvZj-QESulNUEorNOIRikyhJLZ5jsgv"
[[build.buildpacks]]
    uri = "https://drive.google.com/uc?export=download&id=1gd1OFceny2qEIIyThEEpFs0HC6Sw3pFI"
